--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> GW-homepage </title>
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <title> Ghanawrites - homepage </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -34,7 +51,7 @@
             <span class="icon-bar" color:black></span>
           </button>
           <a class="navbar-brand" href="index.html"><em>
-              <h3><span class="gw">G.W</span></h3>
+              <h3><span class="gw">G&nbsp.&nbspW</span></h3>
             </em></a>
 
         </div>
@@ -46,9 +63,9 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">READ<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="articles.html">ARTICLES</a></li>
                 <li><a href="poems.html">POEMS</a></li>
                 <li><a href="stories.html">SHORT STORIES</a></li>
+                <li><a href="articles.html">ARTICLES</a></li>
               </ul>
             </li>
             <li class="#"><a href="video.html">VIDEO</a></li>
@@ -56,7 +73,7 @@
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <img src="images/logo.jpg" height="60px" width="40px">
+            <img src="images/mylogo.png" height="100px" width="100px">
 
           </ul>
         </div>
@@ -68,28 +85,96 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="col-lg-9">
+        <div class="col-lg-8">
           <h2>About</h2>
-          <p id="abo" class="ab"> Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat
-            upidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>
-            <img src="images/lib2.jpg" height="50%" width="100%">
+          <p id="abo" class="ab"> Ghana Writes is a program designed to promote the works of Ghanaian writers.
+            It is aimed at giving these writers a platform to exhibit their works to the public and also to encourage
+            others to pursue their interests in writing. The objective is to change the myopic mentality that writing
+            is a difficult adventure and to encourage young people to start being creative and write.
+            This program serves as a platform where people can read several forms of articles,
+            poems, stories and get inspired through motivational speeches and videos.
+            Ghana Writes creates an avenue for the world to learn from the creative minds we have in Ghana and
+            appreciate <em>Ghanaian Literature</em>
           </p>
+
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-4">
           <iframe width="100%" height="100%" src="https://www.youtube.com/embed/3fTDlTEYtq0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
 
     </div>
+    <br>
+    <br>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8">
+
+          <div id="carousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#carousel" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel" data-slide-to="1"></li>
+              <li data-target="#carousel" data-slide-to="2"></li>
+              <li data-target="#carousel" data-slide-to="3"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="images/im3.jpg" alt="...">
+                <div class="carousel-caption">
+                  <h3></h3>
+                </div>
+              </div>
+              <div class="item">
+                <img src="images/im2.jpg" alt="...">
+                <div class="carousel-caption">
+                  <h3></h3>
+                </div>
+              </div>
+              <div class="item">
+                <img src="images/im1.jpg" alt="...">
+                <div class="carousel-caption">
+                  <h3></h3>
+                </div>
+              </div>
+              <div class="item">
+                <img src="images/im4.jpg" alt="...">
+                <div class="carousel-caption">
+                  <h3></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+          </a>
+          <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          </a>
+          <!-- Carousel -->
+        </div>
+      </div>
+    </div>
+    <script>
+      $('.carousel').carousel({
+        interval: 8000
+      })
+    </script>
+    <div class="col-lg-4">
+
+    </div>
+
     <br><br><br><br>
     <hr>
     <br>
-    <footer> 2020 &#xA9; pascalnabare </footer>
+
+    <footer> &#xA9; 2020. Ghana Writes <br>
+      POWERED BY pascalnabare </footer>
+
   </main>
 </body>
 
