--- a/poems.html
+++ b/poems.html
@@ -4,7 +4,24 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> GW-Poems </title>
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <title> Ghanawrites - Poems </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -35,7 +52,7 @@
             <span class="icon-bar" color:black></span>
           </button>
           <a class="navbar-brand" href="index.html"><em>
-              <h3><span class="gw">G.W</span></h3>
+              <h3><span class="gw">G&nbsp.&nbspW</span></h3>
             </em></a>
 
         </div>
@@ -47,9 +64,9 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">READ<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="articles.html">ARTICLES</a></li>
                 <li><a href="poems.html">POEMS</a></li>
                 <li><a href="stories.html">SHORT STORIES</a></li>
+                <li><a href="articles.html">ARTICLES</a></li>
               </ul>
             </li>
             <li class="#"><a href="video.html">VIDEO</a></li>
@@ -58,7 +75,7 @@
 
           <ul class="nav navbar-nav navbar-right">
 
-            <img src="images/logo.jpg" height="60px" width="40px">
+            <img src="images/mylogo.png" height="100px" width="100px">
           </ul>
         </div>
     </nav>
@@ -71,8 +88,8 @@
       <div class="row">
         <div class="col-sm-4">
 
-          <button type="button" class="btn btn-primary btn-lg mod1" data-toggle="modal" data-target="#mode1">
-            Poem 1
+          <button type="button" class="btn btn-success btn-lg mod1" data-toggle="modal" data-target="#mode1">
+            CLICK TO READ
 
           </button>
           <!-- modal -->
@@ -83,15 +100,58 @@
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal"> &#xA9; </button>
                   <h4 class="modal-title">
-                    HELLO WORLD 1
+                    TITLE: A LETTER TO THE LOVE OF MY LIFE <br> BY: ABENA SERWAH-AKOTO DARKWAH <br>( megan )
 
                   </h4>
                 </div>
                 <div class="modal-body">
                   <p>
-                    1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nam dolores,
-                    necessitatibus perspiciatis doloremque iure
-                    deserunt quaerat dolore quo. Aperiam doloremque dolor fugit eius sint, quam neque modi est deserunt.
+                    I know it's wrong - terribly wrong- to want you all for myself. It's wrong for you to even come to mind.
+                    It's wrong for me to be a dreaming of a forever for us when there isn't even a now. <br><br>
+                    Yes, we have known. Yes, we have been. But that was wrong too, wasn't it?
+                    Was wrong to know you'll be there for me when I needed someone - just one person - to break down and cry in front of.
+                    It was wrong to know you'll grab my hand just when I need support.
+                    It was wrong to know I could bury my face in your chest and away from the world when the winds were strong and furious;
+                    away from the hardship, away from the pain.<br><br>
+                    I was very wrong- gravely wrong. Because you were the hardship, you were causing my pain. I never felt that pain only because-
+                    -well I don't know! I've never known, and I don't know. And I guess I'll never know.<br><br>
+                    I have discovered for myself that it was and is wrong, yet I don't only want you to be my comrade.
+                    I find it very surprising to know, or to realize, that I want more than just that.
+                    I wanted you to be my best friend and now, I want you to love my very soul.<br><br>
+                    (This is not a proposal) <br><br>
+                    It is a confession I had buried in the deepest depths of my heart for so long, it's hard even as I try to get it all out.
+                    I don't know how to tell you everything. I can only say that you're my curse.
+                    You are my struggle in life, you are my trouble, the source of my unhappiness, my very own specially-assigned demon.
+                    You destroy me. You've destroyed me; you're destroying me. How?
+                    I keep wanting you. Wanting us. Wanting a friendship that existed and bloomed nothing but toxic, beautiful flowers.<br><br>
+                    I would have been quite alright if I had been the one to break off this 'friendship' of ours. But no.
+                    You did. I've always wanted to ask you why you stopped coming over, why you stopped confiding in me,
+                    why you stopped checking up on me at the end of each day like good friends do, like good friends like ourselves did.
+                    But don't worry, don't answer. I've seen that bitch. I know her well, and it's fine. <br><br>
+                    She's pretty and you're beautiful. Together you're perfect, I admit. But at least we could have kept in touch.
+                    You had to block me out? Completely? It was some dangerous friendship we had there and
+                    I'm not being selfish by wanting it back because it was poison, danger for me alone, not you.
+                    You were the poison, damn it! So you didn't have to block me out. If I wanted you to kill me, just so I could be with you,
+                    that wasn't your problem. It was mine. I was to die. I don't want this life, it is devoid of you.
+                    You shouldn't have blocked me out. <br><br>
+                    Because it was such a great slam in the head that I scrambled to stand back up. And by the time I'd stood,
+                    she'd grabbed your arm and off you were. Gone. Not dead, but gone. I wish you had died.<br><br>
+                    There's one thing I cannot understand, though I see it clearly. You're poisoning her.
+                    Oh yes you are, just as much, maybe more than you did me. And she's still in because she feels the same way I did
+                    - scratch that- the same way I do. But you have not cut her off. And it does not look like you plan to do that anytime soon. <br>
+                    I'm not jealous; just very wounded. Why would you choose her over me? <br><br>
+                    (Oh but that's a stupid question)<br><br>
+                    And yes, I know I'm lucky to have been delivered from a friendship, a relationship that yielded nothing but rotten fruit,
+                    but I can't help it. Not when I love you this much.<br><br>
+                    So every single time I see you with her, smiling, laughing, holding hands, I want to pull out my hair(if I have any).
+                    And when I see you pull her in for a warm hug, I want to cut myself and scream aloud.
+                    And when you whisper something in her ear and she blushes, I want to die.
+                    Because that would have been me. And now? I'm light years away.<br><br>
+                    So I don't want it to look like I'm desperate or pathetic (which I clearly am)
+                    so I'm going to sit my behind down and torture myself watching you two go all lovey-dovey on each other.
+                    And maybe kill myself on the day I see you share a kiss.<br><br>
+                    Megan<br>
+                    (3rd May, 2018)
                   </p>
                 </div>
                 <div class="modal-footer">
@@ -108,8 +168,8 @@
         </div>
         <div class="col-sm-4">
 
-          <button type="button" class="btn btn-primary btn-lg mod2" data-toggle="modal" data-target="#mode2">
-            Poem 2
+          <button type="button" class="btn btn-success btn-lg mod2" data-toggle="modal" data-target="#mode2">
+            CLICK TO READ
 
           </button>
           <!-- modal -->
@@ -120,15 +180,34 @@
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal"> &#xA9; </button>
                   <h4 class="modal-title">
-                    HELLO WORLD 2
+                    TITLE: Madeleine <BR> BY: HAMILTON ASANTE
 
                   </h4>
                 </div>
                 <div class="modal-body">
                   <p>
-                    2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nam dolores,
-                    necessitatibus perspiciatis doloremque iure
-                    deserunt quaerat dolore quo. Aperiam doloremque dolor fugit eius sint, quam neque modi est deserunt.
+                    i wish you could comprehend what it feels like<br>
+                    to fall for you.<br>
+                    and i don't mean, the simplicity<br>
+                    of the action of my fall.<br>
+                    it's the weight i carry of the before and after<br>
+                    of it all.<br>
+                    it's like i'm on a plane with my parachute in hand,<br> but i slip before i ever had the chance<br>
+                    to give myself the safety that i would need to land.<br> but the fall, it felt like freedom.<br>
+                    and i didn't care about the ground.<br>
+                    you made me feel like i could fly and<br>
+                    even land, safe and sound.<br>
+                    but alas, your love lasted as long<br>
+                    as my ignorance to gravity.<br> and i'm left frantically,<br> grasping at nothing,<br> and gasping for breath. <br>inching towards death. <br>and sadly, as i said,<br>
+                    i carry the weight of how it feels to fall this way. <br>and it is every day.<br>
+                    i let myself go and fall to the inevitable demise.<br> and i hit the ground, causing me to break<br>
+                    every piece of me inside.<br>
+                    but for you, i jump, rather, leap into the sky<br> because it feels so good to be in love<br>
+                    with someone<br>
+                    even if in the end,<br>
+                    you die.<br>
+                    <br> Madeleine
+
                   </p>
                 </div>
                 <div class="modal-footer">
@@ -145,8 +224,8 @@
         </div>
         <div class="col-sm-4">
 
-          <button type="button" class="btn btn-primary btn-lg mod3" data-toggle="modal" data-target="#mode3">
-            Poem 3
+          <button type="button" class="btn btn-success btn-lg mod3" data-toggle="modal" data-target="#mode3">
+            CLICK TO READ
 
           </button>
           <!-- modal -->
@@ -157,15 +236,22 @@
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal"> &#xA9; </button>
                   <h4 class="modal-title">
-                    HELLO WORLD 3
+                    TITLE: 2020<br>
+                    BY: BRIAN ANKRAH
 
                   </h4>
                 </div>
                 <div class="modal-body">
                   <p>
-                    3 ipsum dolor sit amet consectetur adipisicing elit. Beatae nam dolores,
-                    necessitatibus perspiciatis doloremque iure
-                    deserunt quaerat dolore quo. Aperiam doloremque dolor fugit eius sint, quam neque modi est deserunt.
+                    ENOUGH NOW, PLEASE <br><br>
+                    An extra hour?<br> But I've already had plenty <br>
+                    of cruel,
+                    insufferable twenty-twenty.<br><br>
+                    I know<br>s
+                    to wish away the hours is wrong<br>
+                    but this year -
+                    please - 
+                    move quickly on.
                   </p>
                 </div>
                 <div class="modal-footer">
@@ -187,7 +273,8 @@
     <br><br><br><br>
     <hr>
     <br>
-    <footer> 2020 &#xA9; pascalnabare </footer>
+    <footer> &#xA9; 2020. Ghana Writes <br>
+      POWERED BY pascalnabare </footer>
   </main>
 </body>
 
