--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,24 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> GW-Contact </title>
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <title> Ghanawrites - Contact </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -16,7 +33,7 @@
   <header>
     <h1><span class="red">GHA</span><span class="yel">NA WR<span class="gr">ITES</span>
     </h1>
-
+ 
     <span><em>Promoting Ghanaian Literature</em></span>
   </header>
 
@@ -35,7 +52,7 @@
             <span class="icon-bar" color:black></span>
           </button>
           <a class="navbar-brand" href="index.html"><em>
-              <h3><span class="gw">G.W</span></h3>
+              <h3><span class="gw">G&nbsp.&nbspW</span></h3>
             </em></a>
 
         </div>
@@ -47,9 +64,10 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">READ<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="articles.html">ARTICLES</a></li>
+
                 <li><a href="poems.html">POEMS</a></li>
                 <li><a href="stories.html">SHORT STORIES</a></li>
+                <li><a href="articles.html">ARTICLES</a></li>
               </ul>
             </li>
             <li class="#"><a href="video.html">VIDEO</a></li>
@@ -58,7 +76,7 @@
 
           <ul class="nav navbar-nav navbar-right">
 
-            <img src="images/logo.jpg" height="60px" width="40px">
+            <img src="images/mylogo.png" height="100px" width="100px">
           </ul>
         </div>
     </nav>
@@ -77,9 +95,12 @@
         </div>
 
         <div class="col-lg-7 jumbotron spec">
+          <span class="via">If you want your work to be published or wish to know
+            more about this project, you can contact us via:</span>
           <br>
-          email: ghanawrites@gmail.com <br> <br>
-          tel:0592188883
+          <br>
+          <span class="glyphicon glyphicon-envelope"> email: ghanawrites1@gmail.com</span> <br> <br>
+          <span class="glyphicon glyphicon-earphone"> &nbsp;tel: 0592188883 </span>
 
         </div>
 
@@ -90,7 +111,8 @@
     <br><br><br><br>
     <hr>
     <br>
-    <footer> 2020 &#xA9; pascalnabare </footer>
+    <footer> &#xA9; 2020. Ghana Writes <br>
+      POWERED BY pascalnabare </footer>
   </main>
 </body>
 
