--- a/articles.html
+++ b/articles.html
@@ -4,12 +4,30 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> GW-Articles </title>
+  <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <title> Ghanawrites - Articles </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/articles.css">
+
 </head>
 <header>
   <h1><span class="red">GHA</span><span class="yel">NA WR<span class="gr">ITES</span>
@@ -31,7 +49,7 @@
             <span class="icon-bar" color:black></span>
           </button>
           <a class="navbar-brand" href="index.html"><em>
-              <h3><span class="gw">G.W</span></h3>
+              <h3><span class="gw">G&nbsp.&nbspW</span></h3>
             </em></a>
 
         </div>
@@ -43,9 +61,10 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">READ<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="articles.html">ARTICLES</a></li>
+
                 <li><a href="poems.html">POEMS</a></li>
                 <li><a href="stories.html">SHORT STORIES</a></li>
+                <li><a href="articles.html">ARTICLES</a></li>
               </ul>
             </li>
             <li class="#"><a href="video.html">VIDEO</a></li>
@@ -53,8 +72,7 @@
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <img src="images/logo.jpg" height="60px" width="40px">
-
+            <img src="images/mylogo.png" height="100px" width="100px">
           </ul>
         </div>
     </nav>
@@ -69,18 +87,13 @@
         <div class="panel panel-link">
           <div class="panel-heading hd">
             <h4 class="panel-title tt">
-              <a data-toggle="collapse" href="#one">ARTICLE 1</a>
+              <a data-toggle="collapse" href="#one">click to read</a>
             </h4>
           </div>
           <div id="one" class="panel-collapse panel collapse">
-            <div class="panel-body bd">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-              ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur.
-              Excepteur sint occaecat
-              upidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            <div class="panel-body bd">
+
+              coming soon
             </div>
 
           </div>
@@ -95,16 +108,12 @@
         <div class="panel panel-link">
           <div class="panel-heading hd">
             <h4 class="panel-title tt">
-              <a data-toggle="collapse" href="#two">ARTICLE 2</a>
+              <a data-toggle="collapse" href="#two">-</a>
             </h4>
           </div>
           <div id="two" class="panel-collapse panel collapse">
-            <div class="panel-body bd">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-              Excepteur sint occaecat
-              upidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            <div class="panel-body bd">
+              -
             </div>
 
           </div>
@@ -119,16 +128,12 @@
         <div class="panel panel-link">
           <div class="panel-heading hd">
             <h4 class="panel-title tt">
-              <a data-toggle="collapse" href="#thr">ARTICLE 3</a>
+              <a data-toggle="collapse" href="#thr">-</a>
             </h4>
           </div>
           <div id="thr" class="panel-collapse panel collapse">
-            <div class="panel-body bd">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-              Excepteur sint occaecat
-              upidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            <div class="panel-body bd">
+              -
             </div>
 
           </div>
@@ -143,17 +148,12 @@
         <div class="panel panel-link">
           <div class="panel-heading hd">
             <h4 class="panel-title tt">
-              <a data-toggle="collapse" href="#fr">ARTICLE 4</a>
+              <a data-toggle="collapse" href="#fr">-</a>
             </h4>
           </div>
           <div id="fr" class="panel-collapse panel collapse">
-            <div class="panel-body bd">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-              Excepteur sint occaecat
-              upidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-            </div>
+            <div class="panel-body bd">
+              - </div>
 
           </div>
         </div>
@@ -167,19 +167,16 @@
         <div class="panel panel-link">
           <div class="panel-heading hd">
             <h4 class="panel-title tt">
-              <a data-toggle="collapse" href="#fv">ARTICLE 5</a>
+              <a data-toggle="collapse" href="#fv">-</a>
             </h4>
           </div>
           <div id="fv" class="panel-collapse panel collapse">
-            <div class="panel-body bd">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-              Excepteur sint occaecat
-              upidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            <div class="panel-body bd">
+
+              -
             </div>
 
-          </div>
+          </div> 
         </div>
 
       </div>
@@ -189,7 +186,8 @@
     <br><br><br><br>
     <hr>
     <br>
-    <footer> 2020 &#xA9; pascalnabare </footer>
+    <footer> &#xA9; 2020. Ghana Writes <br>
+      POWERED BY pascalnabare </footer>
 
   </main>
 
