--- a/poems.html
+++ b/poems.html
@@ -107,7 +107,7 @@
                 <div class="modal-body">
                   <p>
                     I know it's wrong - terribly wrong- to want you all for myself. It's wrong for you to even come to mind.
-                    It's wrong for me to be a dreaming of a forever for us when there isn't even a now. <br><br>
+                    It's wrong for me to be dreaming of a forever for us when there isn't even a now. <br><br>
                     Yes, we have known. Yes, we have been. But that was wrong too, wasn't it?
                     Was wrong to know you'll be there for me when I needed someone - just one person - to break down and cry in front of.
                     It was wrong to know you'll grab my hand just when I need support.
@@ -274,7 +274,7 @@
     <hr>
     <br>
     <footer> &#xA9; 2020. Ghana Writes <br>
-      POWERED BY pascalnabare </footer>
+     powered by PASCAL NABARE </footer>
   </main>
 </body>
 
