--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <br>
 
     <footer> &#xA9; 2020. Ghana Writes <br>
-      POWERED BY pascalnabare </footer>
+     powered by PASCAL NABARE </footer>
 
   </main>
 </body>
