--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
     <hr>
     <br>
     <footer> &#xA9; 2020. Ghana Writes <br>
-      POWERED BY pascalnabare </footer>
+     powered by PASCAL NABARE </footer>
   </main>
 </body>
 
