--- a/articles.html
+++ b/articles.html
@@ -187,7 +187,7 @@
     <hr>
     <br>
     <footer> &#xA9; 2020. Ghana Writes <br>
-      POWERED BY pascalnabare </footer>
+      powered by PASCAL NABARE </footer>
 
   </main>
 
