--- a/video.html
+++ b/video.html
@@ -91,7 +91,7 @@
     <br><br><br><br>
     <hr>
     <br>
-    <footer> &#xA9; 2020. Ghana Writes <br>
+    <footer id="hop"> &#xA9; 2020. Ghana Writes <br>
       powered by PASCAL NABARE </footer>
   </main>
 </body>
