--- a/video.html
+++ b/video.html
@@ -86,12 +86,12 @@
   <br>
 
   <main>
-    COMING SOON
+    <span class="soon"> COMING SOON  </span>
 
     <br><br><br><br>
     <hr>
     <br>
-    <footer id="hop"> &#xA9; 2020. Ghana Writes <br>
+    <footer> &#xA9; 2020. Ghana Writes <br>
       powered by PASCAL NABARE </footer>
   </main>
 </body>
