--- a/video.html
+++ b/video.html
@@ -85,14 +85,14 @@
   </div>
   <br>
 
-  <main>
-     COMING SOON  
+ <main>
+    COMING SOON
 
     <br><br><br><br>
     <hr>
     <br>
     <footer> &#xA9; 2020. Ghana Writes <br>
-      powered by PASCAL NABARE </footer>
+      POWERED BY pascalnabare </footer>
   </main>
 </body>
 
