--- a/poems.html
+++ b/poems.html
@@ -89,7 +89,8 @@
         <div class="col-sm-4">
 
           <button type="button" class="btn btn-success btn-lg mod1" data-toggle="modal" data-target="#mode1">
-            CLICK TO READ
+           <span class="bub"> a letter to the love of my life<span> <br>
+             click to read
 
           </button>
           <!-- modal -->
@@ -169,7 +170,8 @@
         <div class="col-sm-4">
 
           <button type="button" class="btn btn-success btn-lg mod2" data-toggle="modal" data-target="#mode2">
-            CLICK TO READ
+          <span class="bub"> madaleine <span> <br>
+             click to read
 
           </button>
           <!-- modal -->
@@ -225,7 +227,8 @@
         <div class="col-sm-4">
 
           <button type="button" class="btn btn-success btn-lg mod3" data-toggle="modal" data-target="#mode3">
-            CLICK TO READ
+           <span class="bub"> 2020 <span> <br>
+             click to read
 
           </button>
           <!-- modal -->
@@ -247,7 +250,7 @@
                     An extra hour?<br> But I've already had plenty <br>
                     of cruel,
                     insufferable twenty-twenty.<br><br>
-                    I know<br>s
+                    I know<br>
                     to wish away the hours is wrong<br>
                     but this year -
                     please - 
