--- a/poems.html
+++ b/poems.html
@@ -89,7 +89,7 @@
         <div class="col-sm-4">
 
           <button type="button" class="btn btn-success btn-lg mod1" data-toggle="modal" data-target="#mode1">
-           <span class="bub"> a letter to the love of my life<span> <br>
+           <span class="bub">- a letter to the love of my life<span> <br>
              click to read
 
           </button>
@@ -170,7 +170,7 @@
         <div class="col-sm-4">
 
           <button type="button" class="btn btn-success btn-lg mod2" data-toggle="modal" data-target="#mode2">
-          <span class="bub"> madaleine <span> <br>
+          <span class="bub">- madaleine <span> <br>
              click to read
 
           </button>
@@ -227,7 +227,7 @@
         <div class="col-sm-4">
 
           <button type="button" class="btn btn-success btn-lg mod3" data-toggle="modal" data-target="#mode3">
-           <span class="bub"> 2020 <span> <br>
+           <span class="bub">- 2020 <span> <br>
              click to read
 
           </button>
